# pyatoa

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTORS.txt  README.md  TODO.md  environment.yml  meta.yaml  pyproject.toml  readthedocs.yml  requirements.txt  requirements_old.txt  setup.py  test.py
.github/: config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  module_request.yaml
docs/: README.md  changelog.rst  code_dev_plan.rst  conf.py  contributing.md  core_func.rst  datasyn_misfit.rst  discovery.rst  environment.yml  ex_data_data.rst  ex_data_syn.rst  ex_w_mpi.rst  first_glance.rst  fresh_workflow.rst  gallery.rst  gatherer.rst  index.rst  insp_gallery.rst  inspector.rst  inversion_prep.rst  logging.rst  manager.ipynb  manager.rst  misfit.rst  overview.rst  pyaflowa.ipynb  standards.rst  storage.ipynb  storage.rst  utilities.rst  windows.rst
docs/autoapi/: index.rst
docs/notebooks/: config.ipynb  convert.py  first_glance_raw.ipynb  getting_started.ipynb  insp_gallery.ipynb  insp_gallery_raw.ipynb  inspector.ipynb  storage.ipynb  test.py
pyatoa/: __init__.py  build_adjsrc.py  config.py  create_adjsrc.py  processor.py
pyatoa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyatoa/core/: config.py  diver.py  executive.py  gatherer.py  inspector.py  manager.py  processor.py  pyaflowa.py
pyatoa/docs/: README.md  a_short_example.ipynb  changelog.rst  code_dev_plan.rst  conf.py  config.ipynb  config.rst  convert.py  datasyn_misfit.ipynb  datasyn_misfit.rst  environment.yaml  environment.yml  environment_full.yml  gallery.rst  gatherer.ipynb  gatherer.rst  gathering.ipynb  index.ipynb  index.rst  inspector.ipynb  inspector.rst  intro.rst  inversion_prep.ipynb  (+25 more)
(+482 files in other folders)
